bat.bool1.sumdouble.SumDouble.scala.error
Erreur de compilation :
SumDouble:4: error: Invalid literal number
    return 4a
           ^SumDouble:4: error: ';' expected but something found.
    return 4a
           ^