bat.bool1.sumdouble.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
  if (a==b) {
    return 4a
  }
  else {
    return a+b
  }
}